@@ -8,82 +8,46 @@ import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
-import java.util.Scanner;
 import java.util.stream.Collectors;
 
 
 public class AdminService {
-    private final GroupPTRepository groupPTRepository;
+    private final GroupPTRepository groupPTRepository = GroupPTRepository.getInstance();
     private final TrainerService trainerService;
+    //private List<User> registrationRequests;
 
-
-
-    public AdminService(GroupPTRepository groupPTRepository, TrainerService trainerService) {
-        this.groupPTRepository = groupPTRepository;
+    public AdminService(TrainerService trainerService) {
         this.trainerService = trainerService;
+        //this.registrationRequests = getRegistrationRequests();
     }
 
-    // 1. 회원가입 신청 목록 O
+    // 1. 회원가입 신청 목록
     public List<User> getRegistrationRequests() {
         List<User> allUsers = groupPTRepository.findAllUsers();
         // NONMEMBER인 회원 필터링
-        List<User> registrationRequests = allUsers.stream()
-                .filter(user -> user.getRole() == User.Role.NONMEMBER)
-                .collect(Collectors.toList());
-        return registrationRequests;
+        return allUsers.stream()
+                .filter(user -> user.getState() == User.State.PENDING)
+                .collect(Collectors.toCollection(ArrayList::new));
     }
 
     //관리자가 승인한 목록들의 role nonmember에서 member로 바꿔주기
-    public void approveMembers(String[] approvedNames) {
-        // 회원가입 신청 목록 가져오기
-        List<User> registrationRequests = getRegistrationRequests();
-        if (registrationRequests.isEmpty()) {
-            System.out.println("승인 대기 중인 회원이 없습니다.");
-            return;
-        }
+    public void approveMembers(List<User> users) {
+        for (User user : users) {
+            user.setState(User.State.APPROVED);
 
-        List<User> approvedMembers = new ArrayList<>();
-
-        // 입력받은 이름들에 해당하는 회원들의 Role을 MEMBER로 변경
-        for (String name : approvedNames) {
-            for (User user : registrationRequests) {
-                if (user.getName().equals(name.trim())) {
-                    user.setRole(User.Role.MEMBER);
-                    approvedMembers.add(user);
-                    break;
-                }
+            if (user instanceof Trainer) {
+                groupPTRepository.saveTrainer((Trainer) user);
+            } else {
+                groupPTRepository.saveMember((Member) user);
             }
-        }
-
-        // 승인된 회원 목록 출력
-        if (!approvedMembers.isEmpty()) {
-            System.out.println("다음 회원들이 승인되었습니다:");
-            for (User user : approvedMembers) {
-                System.out.println(user.getName());
-            }
-        } else {
-            System.out.println("입력한 이름에 해당하는 회원이 없습니다.");
         }
     }
-
-
 
     //2. 회원 목록 보기 O
-    public void getMemberList(){
-        List<Member> members = groupPTRepository.findAllMembers();
-        for (int i = 0; i < members.size(); i++) {
-            Member member = members.get(i);
-            int index = i + 1; // 인덱스를 1부터 시작하도록 조정
-            System.out.print("인덱스: " + index + "\t");
-            System.out.print("이름: " + member.getName() + "\t");
-            System.out.print("성별: " + member.getSex() + "\t");
-            System.out.print("나이: " + member.getAge()+ "\t");
-            System.out.print("아이디: " + member.getId()+ "\t");
-            System.out.println("휴대폰 번호: " + member.getPhoneNumber());
-            System.out.println("--------------------------------");
-        }
-
+    public List<Member> getMemberList(){
+        return groupPTRepository.findAllMembers();
     }
+
 
     // 회원 별 수업 스케줄 확인
 //    [홍길동] 남자 30세 hong123 010-1111-2222
@@ -94,34 +58,8 @@ public class AdminService {
 //      5회차 2024.02.05 예약 트레이너 최수민
 //     총 결제 횟수 : 20회 / 남은 회수 : 16회 / 예약된 횟수 : 1회 / 노쇼 : 1회
     //user에서 reservation type이 class인 사람들의 수업 스케줄을 다음과 같이 출력
-    public void viewMemberClassSchedule(String memberId) {
-        // 숫자인지 확인하고 숫자로 변환하거나 그대로 사용
-        try {
-            int memberIndex = Integer.parseInt(memberId);
-            List<Member> members = groupPTRepository.findAllMembers();
-            if (memberIndex < 1 || memberIndex > members.size()) {
-                System.out.println("잘못된 인덱스입니다.");
-                return;
-            }
-            Member selectedMember = members.get(memberIndex - 1);
-            // 회원 정보 출력
-            printMemberInfo(selectedMember);
-            // 회원의 예약 정보 가져오기
-            List<Reservation> reservations = groupPTRepository.findReservationsByPhone(selectedMember.getPhoneNumber());
-            // 결제 정보 가져오기
-            Payment payment = groupPTRepository.findPaymentByPhoneNumber(selectedMember.getPhoneNumber());
-            // 회원의 수업 스케줄 출력
-            printMemberClassSchedule(selectedMember, reservations, payment);
-        } catch (NumberFormatException e) {
-            // 숫자가 아닌 경우 특수 문자로 처리
-            if (memberId.equals("@")) {
-                viewNoShowMembers();
-            } else if (memberId.equals("!")) {
-                sendMarketingMessage();
-            } else {
-                System.out.println("잘못된 입력입니다.");
-            }
-        }
+    public List<Reservation> getMemberClassSchedule(Member member) {
+        return groupPTRepository.findReservationsByPhone(member.getPhoneNumber());
     }
 
     private void printMemberInfo(Member member) {
@@ -151,28 +89,32 @@ public class AdminService {
     }
 
     // 노쇼 회원 확인 이름과 노쇼 횟수 출력
-    public void viewNoShowMembers() {
-        List<Reservation> allReservations = groupPTRepository.findAllReservations();
-        List<String> noShowMembers = new ArrayList<>();
+    public List<Member> getNoShowMembers() {
+        List<List<Member>> noShowMemberLists = groupPTRepository.findAllReservations().stream()
+                .filter(r -> !r.getUsers().equals(r.getAttendants()))
+                .map(r ->
+                        r.getUsers().stream()
+                                .filter(u -> !r.getAttendants().contains(u))
+                                .map(u -> (Member) u).toList())
+                .toList();
 
-        // 노쇼인 경우 해당 회원의 이름을 리스트에 추가
-        for (Reservation reservation : allReservations) {
-            for (User user : reservation.getUsers()) {
-                if (reservation.isNoShowUser(user)) {
-                    noShowMembers.add(user.getName());
-                }
-            }
+        List<Member> noShowMembers = new ArrayList<>();
+        for (List<Member> list : noShowMemberLists) {
+            noShowMembers.addAll(list);
         }
 
-        // 노쇼 회원 목록 출력
-        if (!noShowMembers.isEmpty()) {
-            System.out.println("노쇼 회원 목록:");
-            for (String name : noShowMembers) {
-                System.out.println(name);
-            }
-        } else {
-            System.out.println("노쇼 회원이 없습니다.");
-        }
+        return noShowMembers;
+
+//        // 노쇼 회원 목록 출력
+//        adminView.printNoShowMembers(noShowMembers);
+////        if (!noShowMembers.isEmpty()) {
+////            System.out.println("노쇼 회원 목록:");
+////            for (String name : noShowMembers) {
+////                System.out.println(name);
+////            }
+////        } else {
+////            System.out.println("노쇼 회원이 없습니다.\n");
+////        }
     }
 
     // 수업 연장 마케팅 전송
@@ -185,126 +127,91 @@ public class AdminService {
                     return remainingCount <= 3;
                 })
                 .collect(Collectors.toList());
+//        adminView.sendMarketingMessagesToMembers(membersWithFewSessionsLeft);
 
-        System.out.println("다음 회원들에게 수업 연장 마케팅 메세지를 전송합니다:");
-        for (Member member : membersWithFewSessionsLeft) {
-            System.out.println("이름: " + member.getName());
-            System.out.println("성별: " + member.getSex());
-            System.out.println("나이: " + member.getAge());
-            System.out.println("아이디: " + member.getId());
-            System.out.println("휴대폰 번호: " + member.getPhoneNumber());
-            System.out.println("--------------------------------");
-        }
+//        System.out.println("다음 회원들에게 수업 연장 마케팅 메세지를 전송합니다:");
+//        for (Member member : membersWithFewSessionsLeft) {
+//            System.out.println("이름: " + member.getName());
+//            System.out.println("성별: " + member.getSex());
+//            System.out.println("나이: " + member.getAge());
+//            System.out.println("아이디: " + member.getId());
+//            System.out.println("휴대폰 번호: " + member.getPhoneNumber());
+//            System.out.println("--------------------------------");
+//        }
     }
 
 
 
     //3. 비회원 목록 보기 O __ User에서 Reservation 의 Type이 Consult인 사람들을 불러와야함
-    public void getNonMemberList(){
+    public List<User> getNonMemberList(){
         List<User> allUsers = groupPTRepository.findAllUsers();
 
         // Consult 타입의 예약을 가진 사용자 필터링
-        List<User> nonMembersWithConsultReservation = allUsers.stream()
-                .filter(user -> groupPTRepository.findReservationsByPhone(user.getPhoneNumber()).stream()
-                        .anyMatch(reservation -> reservation.getType() == Reservation.Type.CONSULT))
-                .collect(Collectors.toList());
+        List<User> nonMembersWithConsultReservation = groupPTRepository.findAllReservations().stream()
+                .filter(r -> r.getType().equals(Reservation.Type.CONSULT))
+                .map(r -> r.getUsers().get(0))
+                .toList();
 
-        // 인덱스를 1부터 시작하여 출력
-        for (int i = 0; i < nonMembersWithConsultReservation.size(); i++) {
-            User user = nonMembersWithConsultReservation.get(i);
-            int index = i + 1;
-            System.out.print("인덱스: " + index + "\t");
-            System.out.print("이름: " + user.getName() + "\t");
-            System.out.println("휴대폰 번호: " + user.getPhoneNumber());
-            System.out.println("--------------------------------");
-        }
+        return nonMembersWithConsultReservation;
     }
 
 
+
     //비회원 상담 스케쥴 확인
-    public void viewConsultReservation(int memberIndex) {
-        List<User> allUsers = groupPTRepository.findAllUsers();
-
-
-        if (memberIndex < 1 || memberIndex > allUsers.size()) {
-            System.out.println("잘못된 인덱스입니다.");
-            return;
-        }
-        String phone = allUsers.get(memberIndex - 1).getPhoneNumber();
-        User nonMember = groupPTRepository.findUserByPhone(phone);
-        List<Reservation> consultReservations = groupPTRepository.findReservationsByPhone(nonMember.getPhoneNumber())
-                .stream()
-                .filter(reservation -> reservation.getType() == Reservation.Type.CONSULT)
-                .collect(Collectors.toList());
-
-        // 상담 예약 정보 출력
-        System.out.println("[" + nonMember.getName() + "] " + nonMember.getPhoneNumber());
-
-
-        for (Reservation reservation : consultReservations) {
-            System.out.println("상담 예약일 : " + reservation.getStartDate());
-        }
+    public List<Reservation> getConsultReservation(User user) {
+        return groupPTRepository.findAllReservations().stream()
+                .filter(r -> r.getType().equals(Reservation.Type.CONSULT))
+                .filter(r -> r.getUsers().contains(user))
+                .collect(Collectors.toCollection(ArrayList::new));
     }
 
 
 
     //4. 트레이너 목록
     // 트레이너 목록 출력
-    public void getTrainerList(){
-        List<Trainer> trainers = groupPTRepository.findAllTrainers();
-        for (int i = 0; i < trainers.size(); i++) {
-            Trainer trainer = trainers.get(i);
-            int index = i + 1; // 인덱스를 1부터 시작하도록 조정
-            System.out.print("인덱스: " + index + "\t");
-            System.out.print("트레이너 이름: " + trainer.getName() + "\t");
-            System.out.print("트레이너 나이: " + trainer.getAge()+ "\t");
-            System.out.print("트레이너 성별: " + trainer.getSex()+ "\t");
-            System.out.print("트레이너 등급: " + trainer.getGrade()+ "\t");
-            System.out.println("트레이너 휴대폰 번호: " + trainer.getPhoneNumber());
-            System.out.println("-------------------------------------------------");
-        }
+    public List<Trainer> getTrainerList(){
+        return groupPTRepository.findAllTrainers();
     }
 
 
     //트레이너 수입 확인
-    public void getTrainerDetails(int trainerIndex) {
+    public void getTrainerDetails(Trainer trainer) {
         LocalDate currentDate = LocalDate.now();
         int currentMonth = currentDate.getMonthValue();
         int currentYear = currentDate.getYear();
-        List<Trainer> trainers = groupPTRepository.findAllTrainers();
+//        List<Trainer> trainers = groupPTRepository.findAllTrainers();
 
-
-        if (trainerIndex >= 1 && trainerIndex <= trainers.size()) {
-            Trainer trainer = trainers.get(trainerIndex - 1);
-            System.out.println("트레이너 " + trainer.getName() + "의 수입 기록:");
-
-            for (int year = currentYear; year >= 2023; year--) {
-                int startMonth = (year == currentYear) ? currentMonth : 12;
-                int endMonth = (year == 2023) ? 1 : 12;
-                for (int month = startMonth; month >= endMonth; month--) {
-                    int monthlyIncome = trainerService.calculateIncome(trainer, month, year);
-                    System.out.println(year + "년 " + month + "월 수입: " + monthlyIncome + "원");
-                }
+        for (int year = 2023; year <= currentYear; year++) {
+            int startMonth = (year == 2023) ? 12 : 1;
+            int endMonth = (year == currentYear) ? currentMonth : 12;
+            for (int month = startMonth; month <= endMonth; month++) {
+                int monthlyIncome = trainerService.calculateIncome(trainer, month, year);
+                System.out.println(year + "년 " + month + "월  " + monthlyIncome + "원");
             }
         }
     }
 
 
     //5. 수업 스케줄 확인 __ 현재 시간 이후의 날짜를 가지고 있는 예약만 출력되고 날짜, 시간별로 로 오름차순으로 정렬
-    public void getSchedule() {
+    public List<Reservation> getSchedule() {
         LocalDateTime currentDateTime = LocalDateTime.now();
 
-        List<Reservation> reservations = groupPTRepository.findAllReservations().stream()
+        return groupPTRepository.findAllReservations().stream()
                 .filter(reservation -> reservation.getStartDate().isAfter(currentDateTime))
                 .sorted(Comparator.comparing(Reservation::getStartDate))
                 .collect(Collectors.toList());
 
-        for (Reservation reservation : reservations) {
-            System.out.print("날짜 / 시간 : " + reservation.getStartDate() + "\t");
-            System.out.print("트레이너: " + reservation.getManager() + "\t");
-            System.out.println("예약 인원 수: " + reservation.getUsers().size());
-            System.out.println("-------------------------------------------------");
-        }
+//        if (reservations.isEmpty()) {
+//            adminView.printNoClassSchedule();
+//        } else {
+//            for (Reservation reservation : reservations) {
+//                adminView.printReservationDetails(reservation);
+////                System.out.print("날짜 / 시간 : " + reservation.getStartDate() + "\t");
+////                System.out.print("트레이너: " + reservation.getManager() + "\t");
+////                System.out.println("예약 인원 수: " + reservation.getUsers().size());
+////                System.out.println("-------------------------------------------------");
+//            }
+//        }
     }
 
 
@@ -317,25 +224,31 @@ public class AdminService {
         // 모든 트레이너 가져오기
         List<Trainer> trainers = groupPTRepository.findAllTrainers();
 
-        // 해당 달에 결제한 모든 금액 계산
+        // 해당 달에 결제한 모든 금액
         int monthlyRevenue = calculateMonthlyRevenue(currentMonth, currentYear);
 
-        // 총 인건비 계산
+        // 총 인건비
         int totalLaborCost = calculateTotalLaborCost(trainers, currentMonth, currentYear);
 
-        // 현재까지 총 매출 계산
+        // 현재까지 총 매출
         int totalRevenue = calculateTotalRevenue();
 
-        // 결과 출력
-        System.out.println("[한달 총 매출]: " + monthlyRevenue);
-        System.out.println("[총 인건비]: " + totalLaborCost);
-        System.out.println("[현재까지 총 매출]: " + totalRevenue);
+         //결과 출력
+        //adminView.printFinancialSummary(monthlyRevenue, totalLaborCost, totalRevenue);
+        System.out.println("");
+        System.out.println("--------------------------------");
+        System.out.printf("[한달 총 매출]:\t%,d원%n", monthlyRevenue);
+        System.out.printf("[총 인건비]:\t\t%,d원%n", totalLaborCost);
+        System.out.printf("[총 매출]:\t\t%,d원%n", totalRevenue);
+        System.out.println("--------------------------------");
+        System.out.println("");
+
     }
 
-    private int calculateTotalLaborCost(List<Trainer> trainers, int month, int year) {
+    public int calculateTotalLaborCost(List<Trainer> trainers, int month, int year) {
         int totalLaborCost = 0;
 
-        // 각 트레이너의 월별 인건비를 더함
+        // 각 트레이너의 월별 인건비 합
         for (Trainer trainer : trainers) {
             totalLaborCost += calculateMonthlyLaborCost(trainer, month, year);
         }
@@ -343,12 +256,12 @@ public class AdminService {
         return totalLaborCost;
     }
 
-    private int calculateMonthlyLaborCost(Trainer trainer, int month, int year) {
+    public int calculateMonthlyLaborCost(Trainer trainer, int month, int year) {
         return trainerService.calculateIncome(trainer, month, year);
     }
 
 
-    private int calculateMonthlyRevenue(int month, int year) {
+    public int calculateMonthlyRevenue(int month, int year) {
         List<Payment> payments = groupPTRepository.findAllPayments();
         int monthlyRevenue = 0;
         for (Payment payment : payments) {
@@ -359,7 +272,7 @@ public class AdminService {
         return monthlyRevenue;
     }
 
-    private int calculateTotalRevenue() {
+    public int calculateTotalRevenue() {
         List<Payment> payments = groupPTRepository.findAllPayments();
         int totalRevenue = 0;
         for (Payment payment : payments) {
